@@ -5,6 +5,7 @@ from version 1.1.1 to 1.2.0
 improvement:
 - notes are now stored together with the sensor data and will be read in on
   loading or appending a data file
+- a progress bar is shown when scan for SIX and pump drivers is performed
 
   
 from version 1.1.0 to 1.1.1
